# hochschul-digger

./: .gitignore  LICENSE-DE.txt  main.py  pyproject.toml
src/: config.py  const.py  main.py  models.py  parser.py  pipeline.py  tiss.py  util.py
