[project]
name = "hs-dig"
version = "0.1.0"
description = "Hochschul-Digger - an Austrian Uni Program Parser"
readme = "README.md"
authors = [
    { name = "mmabramovv", email = "264695008+mmabramovv@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "selectolax>=0.4.10",
    "sqlmodel>=0.0.39",
    "typer>=0.26.8",
]
